[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vhost-cve-monitor"
version = "0.1.0"
description = "Periodic nginx vhost security monitor for Debian servers"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "PyYAML>=3.13",
]

[project.scripts]
vhost-cve-monitor = "vhost_cve_monitor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
